# Quantrade

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
funding_arb/: .env  CLAUDE.md  TOPN_BINANCE_LEG_RESEARCH.md  bluemap.md  docker-compose.yml  pyproject.toml
funding_arb/data/: AAPLUSDT_funding.parquet  AMZNUSDT_funding.parquet  COINUSDT_funding.parquet  GOOGLUSDT_funding.parquet  METAUSDT_funding.parquet  MSTRUSDT_funding.parquet  NVDAUSDT_funding.parquet  QQQUSDT_funding.parquet  SPYUSDT_funding.parquet  TSLAUSDT_funding.parquet  TSMUSDT_funding.parquet
funding_arb/notebooks/: 01_backtest_binance_tradfi.ipynb  02_backtest_comparison.ipynb  03_live_signal_dashboard.ipynb
funding_arb/scripts/: monitor_loop.py  run_backtest.py  test_binance_connection.py  test_ibkr_connection.py
funding_arb/src/backtest/: binance_leg.py  costs.py  engine.py  metrics.py
funding_arb/src/data/: binance.py  okx.py
funding_arb/src/execution/: binance_executor.py  ibkr.py  orchestrator.py  paper.py
funding_arb/src/monitor/: scanner.py
funding_arb/src/signal/: generator.py
market_making/: README.md  pyproject.toml
market_making/scripts/: run_simulation.py
market_making/src/: __init__.py
momentum/: README.md  pyproject.toml
momentum/scripts/: run_backtest.py
momentum/src/: __init__.py
notebooks/: 01_pairs_trading.ipynb  02_momentum.ipynb  03_seasonality.ipynb  04_funding_arbitrage.ipynb  05_market_making.ipynb
notebooks/.ipynb_checkpoints/: 02_momentum-checkpoint.ipynb  (+2 more)
pairs_trading/: README.md  pyproject.toml
seasonality/: README.md  pyproject.toml
(+21 files in other folders)
