[project]
name = "funding-arb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "apscheduler>=3.11.2",
    "ib-insync>=0.9.86",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
    "scipy>=1.17.1",
]
